--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
+    <h1>Tic Tac Toe</h1>
+    
     <div class="msg-container">
         <p id="msg">winner</p>
         <div class="neww">
@@ -14,7 +16,7 @@
         </div>
     </div>
     <main>
-        <h1>Tic Tac Toe</h1>
+       
         <div class="container">
         <div class="game">
             <button class="box"></button>
@@ -27,7 +29,7 @@
             <button class="box"></button>
             <button class="box"></button>
 
-            <div class="hello">
+            <div class="reset">
 
                 <button id="reset-btn">reset Game</button>
             </div>
